<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="amount_text">Enter Amount</string>
    <string name="ten_percent">10 %</string>
    <string name="fifteen_percent">15 %</string>
    <string name="twenty_percent">20 %</string>
    <string name="tip">Tip:</string>
    <string name="tip_percent">Tip %:</string>
    <string name="currency_type">$</string>
    <string name="zero_percent">0 %</string>
    <string name="total">Total:</string>

</resources>
