<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipActivity" >

    <EditText
        android:id="@+id/etTipBox"
        android:hint="@string/amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btFifteenPercent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTenPercent"
        android:layout_alignBottom="@+id/btTenPercent"
        android:layout_centerHorizontal="true"
        android:text="@string/fifteen_percent"
        android:onClick="displayTip" />

    <Button
        android:id="@+id/btTwentyPercent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btFifteenPercent"
        android:layout_alignBottom="@+id/btFifteenPercent"
        android:layout_alignRight="@+id/etTipBox"
        android:text="@string/twenty_percent" 
        android:onClick="displayTip" />

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etTipBox"
        android:layout_alignBottom="@+id/etTipBox"
        android:layout_toLeftOf="@+id/btTenPercent"
        android:text="@string/currency_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTipPercentLabel"
        android:layout_below="@+id/etTipBox"
        android:layout_marginTop="18dp"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/zero_percent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipPercent"
        android:layout_alignBottom="@+id/tvTipPercent"
        android:layout_toLeftOf="@+id/btFifteenPercent"
        android:text="@string/tip_percent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btTenPercent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTipBox"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:onClick="displayTip"
        android:text="@string/ten_percent" />

    <TextView
        android:id="@+id/tvTotalAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotalAmount"
        android:layout_alignBottom="@+id/tvTotalAmount"
        android:layout_below="@+id/tvTipPercentLabel"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/btFifteenPercent"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/sbCustomTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btFifteenPercent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:isScrollContainer="false"
        android:max="100"
        android:progress="0" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvTotalAmountLabel"
        android:layout_below="@+id/tvTipPercent"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

</RelativeLayout>
